--- a/address-book-application/server/.env
+++ b/address-book-application/server/.env
@@ -1,3 +1,5 @@
 PORT=3001
 DB_CONNECTION_STRING=mongodb+srv://ritz10001:admin@cluster0.jktyax6.mongodb.net/AddressBook?retryWrites=true&w=majority&appName=Cluster0
 ACCESS_SECRET_TOKEN=ritz123
+API_KEY = AIzaSyDdAVva_hPAJtlP2Xutm2kGi1z3etA7Jsk
+DB_CONNECT = mongodb+srv://ritz10001:admin@cluster0.jktyax6.mongodb.net/
